--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ margin: auto;">Size Guide</button>
             font-family: Verdana;
             text-align: center;
             color: white;
-            font-size: 15px;
+            font-size: 15%;
             padding: 10px;
             border: 40px;}
         #doButton9090key9 {
