--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@ color: white;
 font-size: 15px;
  padding: 10px;
 border: 40px;
-margin: auto;">Size Guide</button>
+margin: auto;
+  margin-left: auto;
+    margin-right: auto;                                                                  ">Size Guide</button>
     </div>
     <style>
         .do {background-color: black;
             font-family: Verdana;
             text-align: center;
             color: white;
+            margin-left: auto;
+            margin-right: auto;
             font-size: 15%;
             padding: 10px;
             border: 40px;}
