--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ font-size: 15px;
 border: 40px;
 margin: auto;
   margin-left: auto;
-    margin-right: auto;                                                                  ">Size Guide</button>
+    margin-right: auto; 
+                                                                    float: right;">Size Guide</button>
     </div>
     <style>
         .do {background-color: black;
