--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ text-align: center;
 color: white;
 font-size: 15px;
  padding: 10px;
-                                                                    length: 90%;
+                                                                    length: 200px;
                                                                     border:40px;
                                                                     float: right;">Size Guide</button>
     </div>
