--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ font-size: 15px;
  padding: 10px;
                                                                     width: 800px;
                                                                     border:40px;
-                                                                    float: right;">Size Guide</button>
+                                                                    float: inherit;">Size Guide</button>
     </div>
     <style>
         .do {background-color: black;
