--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ font-size: 15px;
             width:700px;
             margin: auto;
             z-index:900;
+            position:fixed;
+            top:200px;
+            left:500px;
         }
     </style>
     
