--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ font-size: 15px;
     </style>
     
     <div class="esc-size-guide--popup" style="display: block;"><div class="modal_background"></div><div id="modal_container" class="modal_container" style="z-index: 555;"><div id="buttonExitDiv9"><button id="exitPopupButton9" onclick="$('#modal_container').hide();" style="border-radius: 12px;
-        background-color: black; text-color: white; text-align:center;">✖</button></div><div class="modal_content"><div class="esc-size-guide"><h5 class="esc-size-guide--title">Size Guide</h5><div class="esc-size-guide--table-wrap"><p>
+        background-color: black; color: white; text-align:center;">Close</button></div><div class="modal_content"><div class="esc-size-guide"><h5 class="esc-size-guide--title">Size Guide</h5><div class="esc-size-guide--table-wrap"><p>
         <img src="//cdn.shopify.com/s/files/1/2263/3845/files/Adalberto_lifestyle_Sweatshirt_large.png?v=1515332411"></p><table class="esc-size-guide--table"><tr class="esc-size-guide--row"><th class="esc-size-guide--heading esc-size-guide--col1 esc-size-guide--row1"></th></tr></table></div></div></div></div></div>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script>
