--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ font-size: 15px;
         }
         #modal_container {
             border-width: thick;
-            border-color: goldenrod;
+            border-color: #FFCA28;
             background-color: white;
             font-family: Verdana;
             text-align: center;
