--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ font-size: 15px;
         }
         #modal_container {
             border-width: thick;
-            border-color: #FFCA28;
+            
             background-color: white;
             font-family: Verdana;
             text-align: center;
@@ -53,6 +53,9 @@ font-size: 15px;
             position:fixed;
             top:500px;
             left:125px;
+            border-color:#FFCA28;
+border-width: 1px; /* this allows you to adjust the thickness */
+border-style: solid;
         }
     </style>
     
